[package]
name = "tuitui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.18.0", features = ["crossterm"], default-features = false }
crossterm = "0.23.2"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
pomodoro = "0.1.1"
log = "0.4" 
tui-logger = { git = "https://github.com/gin66/tui-logger", rev = "3a3568e2464dddc2205e071234135998342d7f1d" }
shlex = "1.1.0"
derive-new = "0.5.9"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
derivative = "2.2.0"
commands = "0.0.5"
